[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/overlap/enemy_detection_zone.gd" type="Script" id=1]

[node name="enemy_detection_zone" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 1, 0.509804, 0.509804, 1 )

[node name="detected_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 32

[connection signal="body_entered" from="." to="." method="_on_enemy_detection_zone_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_enemy_detection_zone_body_exited"]
[connection signal="timeout" from="detected_timer" to="." method="_on_detected_timer_timeout"]
